--- a/master-hibernate-pom/pom.xml
+++ b/master-hibernate-pom/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>uk.ac.ebi.intact.maven</groupId>
@@ -18,7 +19,8 @@
 
     <scm>
         <connection>scm:svn:https://intact.googlecode.com/svn/repo/maven/trunk/master-hibernate-pom/</connection>
-        <developerConnection>scm:svn:https://intact.googlecode.com/svn/repo/maven/trunk/master-hibernate-pom/</developerConnection>
+        <developerConnection>scm:svn:https://intact.googlecode.com/svn/repo/maven/trunk/master-hibernate-pom/
+        </developerConnection>
         <url>https://intact.googlecode.com/svn/repo/maven/trunk/master-hibernate-pom/</url>
     </scm>
 
@@ -222,17 +224,17 @@
 
     <repositories>
         <repository>
-             <id>intact.nexus</id>
-             <name>IntAct Nexus</name>
-             <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
+            <id>intact.nexus</id>
+            <name>IntAct Nexus</name>
+            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
         </repository>
     </repositories>
 
     <pluginRepositories>
         <pluginRepository>
-              <id>intact.nexus</id>
-              <name>IntAct Nexus</name>
-              <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
+            <id>intact.nexus</id>
+            <name>IntAct Nexus</name>
+            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
         </pluginRepository>
     </pluginRepositories>
 
