--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.ebi.intact.maven</groupId>
@@ -11,7 +12,8 @@
 
     <scm>
         <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven/trunk</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven/trunk</developerConnection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven/trunk
+        </developerConnection>
         <url>http://intact.svn.sourceforge.net/viewcvs.cgi/intact/repo/maven/trunk/</url>
     </scm>
 
@@ -21,22 +23,24 @@
     </modules>
 
     <distributionManagement>
-            <repository>
-                        <id>ebi-repo</id>
-                                    <url>http://www.ebi.ac.uk/interpro/internal-tools/intact-maven/nexus/content/repositories/ebi-repo</url>
-                                            </repository>
+        <repository>
+            <id>ebi-repo</id>
+            <url>http://www.ebi.ac.uk/interpro/internal-tools/intact-maven/nexus/content/repositories/ebi-repo</url>
+        </repository>
 
         <snapshotRepository>
-                    <id>ebi-repo-snapshots</id>
-                                <url>http://www.ebi.ac.uk/interpro/internal-tools/intact-maven/nexus/content/repositories/ebi-repo-snapshots</url>
-                                        </snapshotRepository>
+            <id>ebi-repo-snapshots</id>
+            <url>
+                http://www.ebi.ac.uk/interpro/internal-tools/intact-maven/nexus/content/repositories/ebi-repo-snapshots
+            </url>
+        </snapshotRepository>
 
         <site>
-                    <id>intact-site</id>
-                                <name>Intact site</name>
-                                            <url>${site.remote.basedir}/${artifactId}</url>
-                                                    </site>
-                                                        </distributionManagement>
+            <id>intact-site</id>
+            <name>Intact site</name>
+            <url>${site.remote.basedir}/${artifactId}</url>
+        </site>
+    </distributionManagement>
 
 
 </project>
