--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -7,7 +6,7 @@
     <artifactId>intact-master</artifactId>
     <packaging>pom</packaging>
     <name>Master POMs :: Master POM</name>
-    <version>23-SNAPSHOT</version>
+    <version>23</version>
 
     <description>This is a master POM that is meant to be used by the various Intact modules. It contains information
         that is common to all projects.
@@ -21,7 +20,7 @@
         <connection>scm:git:https://github.com/EBI-IntAct/maven-master.git</connection>
         <developerConnection>scm:git:https://github.com/EBI-IntAct/maven-master.git</developerConnection>
         <url>https://github.com/EBI-IntAct/maven-master</url>
-        <tag>HEAD</tag>
+        <tag>intact-master-23</tag>
     </scm>
 
     <properties>
