--- a/master-hibernate-pom/pom.xml
+++ b/master-hibernate-pom/pom.xml
@@ -9,7 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>intact-hibernate-master</artifactId>
     <packaging>pom</packaging>
-    <version>45-SNAPSHOT</version>
+    <version>46-SNAPSHOT</version>
 
     <url>http://www.ebi.ac.uk/~intact/devsite/${project.artifactId}</url>
     <name>Master POMs :: Master Hibernate POM</name>
@@ -114,9 +114,9 @@
 
             <dependencies>
                 <dependency>
-                    <groupId>org.h2</groupId>
+                    <groupId>com.h2database</groupId>
                     <artifactId>h2</artifactId>
-                    <version>2006-07-14-beta</version>
+                    <version>1.4.197</version>
                 </dependency>
             </dependencies>
         </profile>
@@ -208,7 +208,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.200</version>
+            <version>1.4.197</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
